# golden-sample

./: .gitignore  .gitmodules  Dockerfile  README.md  build_docker.sh  run_docker.sh
.github/workflows/: general_tests.yml
HWIO/: hwio.c  hwio.h
ReadPeriodic/: Makefile  project.yml
ReadPeriodic/src/: main.c  readperiodic.c  readperiodic.h
ReadPeriodic/test/: test_readperiodic.c
TMR/: tmr.c  tmr.h
bash/: README.md  findandreplace.sh  foriterate.sh  functionandreturn.sh  increment.sh  integerif.sh  readfilelinebyline.sh  sete.sh  seto.sh  setu.sh  setx.sh  stringif.sh  stringsplit.sh  switchcase.sh  whileiterate.sh
bitbake/: README.md  main.c
bitbake-structure/meta-build/classes/: base.bbclass  gpp.bbclass
bitbake-structure/meta-build/conf/: layer.conf
bitbake-structure/meta-test/classes/: base.bbclass
bitbake-structure/test/conf/: bblayers.conf
bitbake/buildandtest/conf/: bblayers.conf
bitbake/meta-build/classes/: debug.bbclass
bitbake/meta-test/classes/: base.bbclass
bitbake/meta-test/conf/: layer.conf
ceedling/hwdependentcode/: randombytegenerator.c  randombytegenerator.h
ceedling/myproject/: Makefile  project.yml
ceedling/myproject/src/: customprintrandom.c  customprintrandom.h  main.c
ceedling/myproject/test/: test_randomprint.c
ceedling/thirdpartycode/: customprint.c  customprint.h
cmake/: README.md
cmake/dynamic-lib/lib/: CMakeLists.txt
cmake/dynamic-lib/project/: CMakeLists.txt  main.c
cmake/static-lib/lib/: CMakeLists.txt  mylibrary.c
cmake/static-lib/project/: CMakeLists.txt
custom_echo/: test_echo.py
docker/: Dockerfile  README.md  build_docker.sh  run_docker.sh
docs/Bash/: cheat-sheat.md
docs/Embedded-Linux-and-C-Notes/: Embedded-Linux-and-C-Notes.docx
docs/bitbake/: bitbake.md
docs/cmake/: cmake.md
docs/debugging/: dmalloc.md  gdb.md  valgrind.md
docs/hal/: adcdma.patch
docs/makefile/: makefile.md
docs/others/: notes.md
glibc/: Makefile  README.md  binarysearchtree.c  custom_fprintf.c  deneme.txt  embeddedc.c  file_io.c  file_stream.c  fork-pipe-exec.c  functionpointer.c  getopt.c  hash.c  ipc_fifo.c  ipc_msgqueue.c  memmove-memmem.c  mmap.c  poll_socket.c  poll_timer.c  popen.c  random.c  reallocarray-alloca-strndup-strndupa.c  sigaction.c  socket_tcp.c  socket_udp.c  sortandsearch.c  str_ncpy-casecmp-chr-rchr-fry-tok_r.c  tailq.c  thread_conditionvariable.c  thread_mutex.c  thread_sem_detached.c  time.c  variadic_sum.c
hal/: README.md  bake.sh  buildall.sh  debuging.sh  download_repos.sh  flashall.sh  gdbclient.sh  openocd.sh
hal/ADC_SINGLE_DMA/: ADC_SINGLE_DMA_TEMP.txt  CMakeLists.txt
hal/ADC_SINGLE_DMA/inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
hal/ADC_SINGLE_DMA/src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
hal/GPIO_Input/: CMakeLists.txt
hal/GPIO_Input/inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
hal/GPIO_Input/src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
hal/GPIO_OUT_IN_INT/: CMakeLists.txt
hal/GPIO_OUT_IN_INT/inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
hal/GPIO_OUT_IN_INT/src/: main.c  stm32l4xx_it.c  system_stm32l4xx.c
hal/GPIO_Out/: .mxproject  CMakeLists.txt
hal/GPIO_Out/inc/: FreeRTOSConfig.h  main.h  stm32f1xx_it.h
hal/GPIO_Out/src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c
hal/IO/: CMakeLists.txt
hal/IO/inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
hal/IO/src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
hal/TIM_RTC_RCC_PLL/: CMakeLists.txt
hal/TIM_RTC_RCC_PLL/inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
hal/TIM_RTC_RCC_PLL/src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
hal/UART_ADC_DMA/: CMakeLists.txt
hal/UART_ADC_DMA/inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
hal/UART_ADC_DMA/src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
hal/UART_RTC/: CMakeLists.txt  UART_DMA_RCC.txt
hal/UART_RTC/inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
hal/UART_RTC/src/: main.c  stm32l4xx_hal_msp.c
hal/adc_dma/: adc_dma.patch
hal/base_example/: CMakeLists.txt  base_example.txt
hal/base_example/inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
hal/base_example/src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
hal/gpio/: gpio.patch
hal/meta-hal/classes/: base.bbclass
hal/meta-hal/conf/: layer.conf
hal/patches/: gpio.patch  uartrtc.patch
hal/uart_rtc/: uart_rtc.patch
hal2/UART_RTC/inc/: stm32l4xx_hal_conf.h
hw_tools/: bake.sh  debuging.sh  download_repos.sh
hw_tools/CANBUS/: CANBUS.txt  CMakeLists.txt  README.md  canard_stm32.patch  transport.py.patch
hw_tools/CANBUS/inc/: FreeRTOSConfig.h  can.h  gpio.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  uavcan.h  usart.h
hw_tools/CANBUS/src/: can.c  gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  system_stm32f1xx.c  uavcan.c  usart.c
hw_tools/CustomBase/: CMakeLists.txt
hw_tools/MC25LC512/: CMakeLists.txt
hw_tools/STM32F1_Custom/: CMakeLists.txt
makefile/: README.md
makefile/condition/: runmake.sh
makefile/different-directory-makefile/: runmake.sh
makefile/include-mk/: Makefile  includeme.mk
projects/: README.md  libcanard  tcp_responder.c
projects/can_dump/: CMakeLists.txt  build.sh  can_dumper.c
projects/json_parser/: build.sh
python/: README.md
python/custom_echo/: cecho.py  echo.py
python/extended-grep/: README.md  egrep.py  egrep_utils.py  test_util.py
rtos/: README.md  bake.sh  buildall.sh  cleanall.sh  debuging.sh  download_repos.sh  execute.sh
rtos/IO_vtask_delay/: CMakeLists.txt
rtos/TASK_AND_DELAY/: CMakeLists.txt
rtos/TASK_AND_DELAY/inc/: FreeRTOSConfig.h  main.h  stm32l4xx_it.h
rtos/TASK_AND_DELAY/src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
rtos/base_example/: CMakeLists.txt  IO.txt
rtos/task_control/: task_control.patch
rtos/task_creation/: task_creation.patch
scripts/: README.md  change_user.sh  dirty_check.sh  format_check.sh  lint_check.sh  run_unittests.sh
sw_tools/json_parser/: cjson_parser.c
tools/: basic_c_linter.c  comment_remover.c
tools/can_dump/: can_dumper.c
tools/json_parser/: Makefile
(+54 files in other folders)
